--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "ea-nodes"                 # choose something unique; no “ComfyUI” prefix
-version = "0.1.0"
+name = "ea-nodes"
+version = "0.1.1"
 description = "ExoticArts custom nodes for ComfyUI (EA Power LoRA, etc.)"
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
